@@ -12,7 +12,9 @@ __author__ = "Joe Gregorio (joe@bitworking.org)"
 __copyright__ = "Copyright 2006, Joe Gregorio"
 __contributors__ = ["Thomas Broyer (t.broyer@ltgt.net)",
     "James Antill",
-    "Xavier Verges Farrero"]
+    "Xavier Verges Farrero",
+    "Jonathan Feinberg",
+    "Blair Zajac"]
 __license__ = "MIT"
 __version__ = "$Rev$"
 
